samples/_failures_safe/1761515864_a81771_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5413bed3.c: In function ‘main’:
./samples/SAFE/__tmp_5413bed3.c:156:27: error: expected ‘;’ at end of input
  156 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_5413bed3.c:156:21: error: expected declaration or statement at end of input
  156 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_5413bed3.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5413bed3.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5413bed3.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5413bed3.c:156:21: error: expected declaration or statement at end of input
